# Proy_Invest

./: CMakeLists.txt  LICENSE.md  README.md  aplicacion_cliente.pro  aplicacion_cliente.pro.user.18  aplicacion_cliente.pro.user.3.2-pre1  aplicacion_cliente.pro.user.a403a56  aplicacion_cliente.pro.user.c7d3732  imagenes.qrc  main.cpp  main_h.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadcliente.cpp  threadcliente.h  v_autores11.cpp  v_autores11.h  v_autores11.ui  v_visualizador.cpp  v_visualizador.cpp.autosave  v_visualizador.h  v_visualizador.ui
darknet/: Makefile
darknet/src/: network_kernels.cu  option_list.c  wrapper_c.c  wrapper_c2.c
darknet_wrapper/: wrapper_cpp.cpp
